--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
+import SocialPill from '../components/SocialPill.astro';
+import LinkedIn from '../components/icons/LinkedIn.astro';
+import GitHub from '../components/icons/GitHub.astro';
+import Mail from '../components/icons/Mail.astro';
+
 
 ---
 
@@ -15,27 +20,27 @@ import Header from '../components/Header.astro';
 			</figure>
 			<div class=" mt-2 w-full h-auto flex justify-center items-center
 			flex-col">
-				<h1 class="text-white text-3xl">Sergio García</h1>
-				<h2 class="text-white text-2xl">Desarrollador Web</h2>
-				<div class="w-full h-auto flex justify-center items-center flex-wrap gap-3 mt-2">
-					<button class="bg-opacity-50 bg-gray-800 shadow-lg backdrop-blur-9 border-opacity-18 rounded-10 w-auto p-1 rounded-lg
-									transition-transform transform hover:scale-105 cursor-pointer">
-					  <a href="https://twitter.com">GITHUB</a>
-					</button>
-				  
-					<button class="bg-opacity-50 bg-gray-800 shadow-lg backdrop-blur-9 border-opacity-18 rounded-10 w-auto p-1 rounded-lg
-									transition-transform transform hover:scale-105 cursor-pointer">
-					  <a href="https://linkedin.com">LINKEDIN</a>
-					</button>
-				  
-					<button class="bg-opacity-50 bg-gray-800 text-slate-400 shadow-lg backdrop-blur-9 border-opacity-18 rounded-10 w-auto p-1 rounded-lg
-									transition-transform transform hover:scale-105 cursor-pointer">
-					  <a href="https://gmail.com" class="btn-link-no-underline">GMAIL</a>
-					</button>
-				  </div>
-				  
-				  
+			<h1 class="text-4xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85">Sergio García</h1>			
+			<h2 class="text-3xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85">Desarrollador Web</h2>
+				<div class="w-full h-auto flex justify-center items-center max-w-[80%] flex-wrap gap-3 mt-2">
+					<SocialPill href="mailto:sergiogargor9@gmail.com">
+						<Mail class="size-4 md:size-6" />
+						 sergiogargor9@gmail.com
+					  </SocialPill>
+					<SocialPill href="https://linkedin.com/in/midudev">
+						<LinkedIn class="size-4 md:size-6" />
+						 LinkedIn
+					  </SocialPill>
+					  <SocialPill href="https://github.com/Sergiioog">
+						<GitHub class="size-4 md:size-6" />
+						 GitHub
+					  </SocialPill>
+					 
+				  </div> 
 			</div>
+		</section>
+		<section class=" h-auto w-full flex justify-center items-center flex-col mt-5">
+			
 		</section>
 	</main>
 </Layout>
