--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Mail from '../components/icons/Mail.astro';
 						<Mail class="size-4 md:size-6" />
 						 sergiogargor9@gmail.com
 					  </SocialPill>
-					<SocialPill href="https://linkedin.com/in/midudev">
+					<SocialPill href="https://www.linkedin.com/in/sergiogarciagordo/">
 						<LinkedIn class="size-4 md:size-6" />
 						 LinkedIn
 					  </SocialPill>
