--- a/src/components/OffCanvas.astro
+++ b/src/components/OffCanvas.astro
@@ -2,19 +2,19 @@
 ---
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<section class="mt-2 mr-2">
-  <button id="botonPrincipal" class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">☰</button>
-
-  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-    <div class="offcanvas-header flex justify-end items-center">
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+<section class="mt-2 mr-2  ">
+  <button class=" text-white font-bold py-2 px-3 rounded" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">☰</button>
+  <div class="offcanvas offcanvas-top " tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+    <div class="offcanvas-header " id="divBoton" >
+      <button type="button" class="btn-close text-reset bg-white text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
+  
     <div class="offcanvas-body">
-      <ul class="list-none">
-        <li>Inicio</li>
-        <li>Proyectos</li>
-        <li>Educación</li>
-        <li>Contáctame</li>
+      <ul class="list-none h-auto " >
+        <li><a href="" class=" text-white no-underline text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer">Inicio</a></li>
+        <li><a href="" class=" text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Proyectos</a></li>
+        <li><a href="" class="  text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Educación</a></li>
+        <li><a href="" class="  text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Contáctame</a></li>
       </ul>
     </div>
   </div>
@@ -26,7 +26,8 @@
 <script type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 <style>
-#botonPrincipal {
+
+#offcanvasTop {
   background: rgba(24, 24, 24, 0.9);
   box-shadow: 0 0 20px 0 rgba(225, 223, 223, 0.37);
   backdrop-filter: blur( 6px );
@@ -36,9 +37,15 @@
   color:white;
 
 }
+#botonPri {
+  background-color: red;
+}
 
-
-
+#divBoton {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
 
 
 
