--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,10 +19,10 @@ import Mail from '../components/icons/Mail.astro';
 				<img src="assets/sergio.png" alt="Foto Sergio" class="max-w-full object-cover">
 			</figure>
 			<div class=" mt-2 w-full h-auto flex justify-center items-center
-			flex-col">
-			<h1 class="text-4xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85">Sergio García</h1>			
-			<h2 class="text-3xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85">Desarrollador Web</h2>
-				<div class="w-full h-auto flex justify-center items-center max-w-[80%] flex-wrap gap-3 mt-2">
+			flex-col ">
+			<h1 class="text-4xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85 mt-1">Sergio García</h1>			
+			<h2 class="text-3xl font-semibold  flex gap-x-3 items-center text-black/80 dark:text-white/85 mt-1">Desarrollador Web</h2>
+				<div class="w-full h-auto flex justify-center items-center max-w-[80%] flex-wrap gap-3 mt-4">
 					<SocialPill href="mailto:sergiogargor9@gmail.com">
 						<Mail class="size-4 md:size-6" />
 						 sergiogargor9@gmail.com
