--- a/src/components/OffCanvas.astro
+++ b/src/components/OffCanvas.astro
@@ -2,19 +2,19 @@
 ---
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<section class="mt-2 mr-2  ">
+<section class="mt-2 mr-2   ">
   <button class=" text-white font-bold py-2 px-3 rounded" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">☰</button>
-  <div class="offcanvas offcanvas-top " tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-    <div class="offcanvas-header " id="divBoton" >
+  <div class="offcanvas offcanvas-top  " tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+    <div class="offcanvas-header  " id="divBoton" >
       <button type="button" class="btn-close text-reset bg-white text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
   
-    <div class="offcanvas-body">
-      <ul class="list-none h-auto " >
-        <li><a href="" class=" text-white no-underline text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer">Inicio</a></li>
-        <li><a href="" class=" text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Proyectos</a></li>
-        <li><a href="" class="  text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Educación</a></li>
-        <li><a href="" class="  text-white text-2xl ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Contáctame</a></li>
+    <div class="offcanvas-body ">
+      <ul class="list-none">
+        <li><a href="" class=" text-white no-underline text-lg ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer">Inicio</a></li>
+        <li><a href="" class=" text-white text-lg ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Proyectos</a></li>
+        <li><a href="" class="  text-white text-lg ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Educación</a></li>
+        <li><a href="" class="  text-white text-lg ml-4 mb-2 font-semibold  flex gap-x-3 items-center cursor-pointer no-underline">Contáctame</a></li>
       </ul>
     </div>
   </div>
