--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -5,7 +5,7 @@ const { class: className, id } = Astro.props
 <section
   id={id}
   data-section={id}
-  class={`section ${className} w-full mx-auto mt-52 flex justify-center  lg:w-[740px] pb-24`}
+  class={`section ${className} w-full mx-auto mt-52 flex justify-center items-center flex-col  lg:w-[740px] pb-24`}
 >
   <slot />
 </section>
