--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import GitHub from '../components/icons/GitHub.astro';
 import Mail from '../components/icons/Mail.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Briefcase from '../components/icons/Briefcase.astro';
+import TechBox from '../components/TechBox.astro';
 
 
 ---
@@ -41,10 +42,10 @@ import Briefcase from '../components/icons/Briefcase.astro';
 				  </div> 
 			</div>
 		</section>
-		<SectionContainer id="experiencia">
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"><Briefcase class="size-7" />About me</h2>
+		<SectionContainer id="experiencia" >
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/90"><Briefcase class="size-7" />About me</h2>
 			<div class="h-auto w-4/5 flex items-center justify-center flex-col">
-				<p class="text-white/80 text-lg text-justify">¡Hola! Mi nombre es Sergio García, tengo 19 años y actualmente estoy estudiando un Ciclo Formativo de Grado Superior
+				<p class="text-white/90 font-semibold text-lg text-justify">¡Hola! Mi nombre es Sergio García, tengo 19 años y actualmente estoy estudiando un Ciclo Formativo de Grado Superior
 					(CFGS) de Desarrollo de Aplicaciones Web en la U-Tad (Universidad de Tecnología y Arte Digital), adscrita a la Universidad Camilo José Cela. <br><br>
 					Desde pequeño me ha gustado el mundo de la tecnología, los ordenadores y la programación. Actualmente estoy familiarizándome con 
 					lenguajes de programacion cómo Java, JavaScript o Angular aunque trabajo constantemente para seguir mejorando.
@@ -57,9 +58,33 @@ import Briefcase from '../components/icons/Briefcase.astro';
 			</div>
 		</SectionContainer>
 		<SectionContainer>
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 mt-0 items-center text-black/80 dark:text-white/80"><Briefcase class="size-7" />Tech Stack</h2>
-			<div class="h-auto w-4/5  grid grid-cols-2">
-				
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 mt-0 items-center text-black/80 dark:text-white/80"><Briefcase class="size-7"/>Mi Tech Stack</h2>
+			<div class="h-auto mx-auto grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-x-4">
+				<TechBox imagen='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg' alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-plain.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/debian/debian-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/foundation/foundation-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain-wordmark.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/oracle/oracle-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt='HTML' />
+				<TechBox imagen="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt='HTML' />
+		
+
+
 			</div>
 		</SectionContainer>
 	</main>
